# aisysteminformer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_processes.py
src/aisysteminformer/: __init__.py  __main__.py  cli.py  logconfig.py
src/aisysteminformer/core/: __init__.py  disk.py  files.py  formatting.py  network.py  processes.py  serialization.py  services.py  system.py
src/aisysteminformer/tui/: __init__.py  app.py
tests/: test_cli.py  test_files.py  test_formatting.py  test_network_disk_services.py  test_processes.py  test_serialization_json.py  test_system.py
