[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisysteminformer"
version = "0.1.0"
description = "A free, cross-platform tool to monitor system resources, inspect processes, network connections, disk activity and services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aisysteminformer contributors" }]
keywords = ["system", "monitor", "process", "task-manager", "psutil", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=7.0,<8",
    "textual>=0.80,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-psutil",
]

[project.urls]
Homepage = "https://github.com/ignaciosgithub/aisysteminformer"
Issues = "https://github.com/ignaciosgithub/aisysteminformer/issues"

[project.scripts]
aisysteminformer = "aisysteminformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["aisysteminformer"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
