[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisysteminformer"
version = "0.1.0"
description = "A free, cross-platform tool to monitor system resources, inspect processes, network connections, disk activity and services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aisysteminformer contributors" }]
keywords = ["system", "monitor", "process", "task-manager", "psutil", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=7.0,<8",
    "textual>=0.80,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-psutil",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/ignaciosgithub/aisysteminformer"
Issues = "https://github.com/ignaciosgithub/aisysteminformer/issues"

[project.scripts]
aisysteminformer = "aisysteminformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["aisysteminformer"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=aisysteminformer --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["aisysteminformer"]
omit = [
    # Interactive Textual UI and the module entrypoint are exercised manually;
    # they contain no business logic worth gating on.
    "*/tui/app.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.bandit]
# Tests legitimately spawn helper subprocesses; exclude them from the scan.
exclude_dirs = ["tests"]
# B404/B603: services.py uses subprocess with fixed, allow-list-validated
# argument lists and never shell=True (see the module docstring), so the
# generic "subprocess" warnings do not apply. All other checks remain active.
skips = ["B404", "B603"]
